--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,5 +25,6 @@ jobs:
     - name: Checkout private tools
       uses: actions/checkout@v2
       with:
+        run: git config --global init.defaultBranch master
         repository: DiegoFernandesQA/helper-qa
         token: ${{ secrets.GITHUB_TOKEN }} # `GitHub_PAT` is a secret that contains your PAT
