--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,4 +26,7 @@ jobs:
       uses: actions/checkout@v2
       with:
         repository: DiegoFernandesQA/Cypress
+      
+    - name: Install dependencies
+      run: npm install
 #         token: ${{ secrets.GITHUB_TOKEN }}
