--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,3 +30,5 @@ jobs:
     - name: Install dependencies
       run: npm install
 #         token: ${{ secrets.GITHUB_TOKEN }}
+    - name: Executar testes
+      run: npm run cy:run
